daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: dns-monitor
  namespace: kube-system
  labels:
    app: dns-monitor
spec:
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: dns-monitor
  template:
    metadata:
      labels:
        app: dns-monitor
    spec:
      serviceAccountName: dns-monitor-sa
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: ebpfdns
        image: privatej0ker/dns-monitor:latest
        imagePullPolicy: Always
        securityContext:
          seccompProfile:
            type: Unconfined
          capabilities:
            add:
              - BPF             # Для загрузки eBPF
              - PERFMON         # Для чтения трейспоинтов
              - NET_ADMIN       # Для XDP / TC
              - SYS_RESOURCE    # Для управления памятью (memlock) для bpf мап
