monitoring.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dns-monitor-svc
  namespace: kube-system 
  labels:
    app: dns-monitor
spec:
  type: ClusterIP
  selector:
    app: dns-monitor
  ports:
    - name: metrics
      port: 8080      
      targetPort: 8080
